Tue Feb 14 16:34:11 2012  Shota Fukumori  <sorah@tubusu.net>

	* test/rubygems/test_gem_commands_help_command.rb: Add one
	  `require` because if run test-all with test/unit parallel
	  running, sometimes this test fails by some constants not found.
	  The error reason is some worker doesn't require the file needed by
	  this test. This issue is related to [ruby-core:36168].

Tue Feb 14 15:58:31 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (initial_params): pack in a struct.

	* gc.c (rb_gc_set_params): set parameters always.
	  [ruby-dev:44648] [Bug #5467]

Tue Feb 14 15:44:42 2012  NAKAMURA Usaku  <usa@ruby-lang.org>

	* test/irb/test_completion.rb: skip if cannot load irb/completion
	  (maybe readline does not exist).

Tue Feb 14 15:07:23 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/test/unit/assertions.rb (build_message): skip escaped
	  question marks.

Mon Feb 13 12:06:29 2012  Loren Segal  <lsegal@soen.ca>

	* io.c (Init_IO): use directive hack to make ARGF documentable
	  in other tools.  [ruby-core:42515][Bug #6007]

Sun Feb 12 16:57:56 2012  Akinori MUSHA  <knu@iDaemons.org>

	* misc/rdoc-mode.el (rdoc-imenu-create-index): Add imenu support
	  to rdoc-mode.

	* misc/rdoc-mode.el (rdoc-mode): Fix regexp patterns containing
	  "\s " where CR/LF is not supposed to match.

Sun Feb 12 16:56:23 2012  Akinori MUSHA  <knu@iDaemons.org>

	* misc/rdoc-mode.el (rdoc-mode): Add provide so that requiring
	  this library succeeds.

Sun Feb 12 16:53:18 2012  Akinori MUSHA  <knu@iDaemons.org>

	* lib/tempfile.rb (Tempfile#unlink, Tempfile::Remover#call): Just
	  call File.unlink and ignore ENOENT because existence check
	  before unlinking does not help in terms of race condition.

	* lib/tempfile.rb (Tempfile#unlink, Tempfile::Remover#call): My
	  comment about thread safeness is obsolete.

Sun Feb 12 16:50:28 2012  Akinori MUSHA  <knu@iDaemons.org>

	* lib/shellwords.rb: Fix rdoc markups.

Sun Feb 12 16:50:28 2012  Akinori MUSHA  <knu@iDaemons.org>
