@@ -43,11 +43,6 @@ Regular expressions (<i>regexp</i>s) are patterns which describe the
 contents of a string.
     EXPECTED
 
-    # FIXME 1.9 fix on windoze
-    # preprocessor uses binread, so line endings are \r\n
-    expected.gsub!("\n", "\r\n") if
-      RUBY_VERSION < "1.9.3" && RUBY_PLATFORM =~ /mswin|mingw/
-
     assert_equal expected, content
   end
 
@@ -66,11 +61,6 @@ contents of a string.
     content = @pp.include_file @file_name, '', Encoding::US_ASCII
 
     expected = "?\n"
-
-    # FIXME 1.9 fix on windoze
-    # preprocessor uses binread, so line endings are \r\n
-    expected.gsub!("\n", "\r\n") if
-      RUBY_VERSION < "1.9.3" && RUBY_PLATFORM =~ /mswin|mingw/
 
     assert_equal expected, content
   end
